Реализован экспорт в Exel с фильтром по дате + Дашборд для исполнителя